--- a/.gitignore
+++ b/.gitignore
@@ -1,23 +1,41 @@
 # See https://help.github.com/articles/ignoring-files/ for more about ignoring files.
 
 # dependencies
-/node_modules
-/.pnp
+/node_modules/
+.pnp/
 .pnp.js
 
-# testing
-/coverage
-
-# production
-/build
+# production build
+/build/
+/dist/
 
 # misc
 .DS_Store
-.env.local
-.env.development.local
-.env.test.local
-.env.production.local
-
+.env*
+*.log
 npm-debug.log*
 yarn-debug.log*
 yarn-error.log*
+
+# testing
+/coverage/
+
+# editor settings
+.vscode/
+.idea/
+*.suo
+*.ntvs*
+*.njsproj
+*.sln
+
+# OS-specific
+Thumbs.db
+ehthumbs.db
+Desktop.ini
+
+# next.js (추후 도입 대비)
+/.next/
+/out/
+
+# TypeScript (추후 도입 대비)
+*.tsbuildinfo
